<resources>
    <string name="app_name">Ports Mobile</string>
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <string name="desfazer">Desfazer</string>
    <string name="entrar">Entrar</string>
    <string name="entrando">Entrando</string>
    <string name="empresa">Empresa</string>
    <string name="senha">Senha</string>
    <string name="usuario">Usuário</string>
    <string name="bem_vindo">Bem vindo ao Ports Mobile</string>
    <string name="insira_credenciais">Insira suas credencias</string>
    <string name="email_suite">suitesistemas@gmail.com</string>
    <plurals name="numero_selecionados">
        <item quantity="one">1 selecionado</item>
        <item quantity="other">%d selecionados</item>
    </plurals>
    <string name="banco_dados">Banco de Dados</string>
    <string name="contato">Contato</string>
    <string name="crm">CRM</string>
    <string name="logout">Logout</string>
    <string name="relatar_problema">Relatar problema</string>
    <string name="sair">Sair</string>
    <string name="sincronizar">Sincronizar</string>
    <string name="tarefas">Tarefas</string>
    <string name="clientes">Clientes</string>
    <string name="vendas">Vendas</string>
    <string name="pedidos">Pedidos</string>
    <string name="lancamentos">Lançamentos</string>
    <string name="lancamentos_financeiros">Lançamentos Financeiros</string>
    <string name="gerencie_clientes">Gerencie todos os seus clientes</string>
    <string name="gerencie_vendas">Controle suas vendas de qualquer lugar</string>
    <string name="gerencie_lancamentos">Visualize todos os lançamentos financeiros</string>
    <string name="cadastre_cores">Cadastre novas cores</string>
    <string name="lanc_adapter_ref">REF.: %s</string>
    <string name="lanc_adapter_emissao">Data Emissão: %s</string>
    <string name="lanc_adapter_vencimento">Data Vencimento: %s</string>
    <string name="lanc_adapter_pagamento">Data Pagamento: %s</string>
    <string name="task_adapter_inicio">Início: %s</string>
    <string name="task_adapter_termino">Término: %s</string>
    <string name="task_adapter_prev_inicio">Prev. Início: %s</string>
    <string name="task_adapter_prev_termino">Prev. Término: %s</string>
    <string name="crm_adapter_ocorrencia">Data Ocorrência: %s</string>
    <string name="crm_adapter_solucao">Data Solução: %s</string>
    <string name="concluido">CONCLUÍDO</string>
    <string name="em_aberto">EM ABERTO</string>
    <string name="cancelado">CANCELADO</string>
    <string name="pago">PAGO</string>
    <string name="adapter_data_cadastro">Data Cadastro: %s</string>
    <string name="adapter_referencia">Referência: %s</string>
    <string name="adapter_codigo">Código: %d</string>
    <string name="a_vista_adapter">À vista: R$ %s</string>
    <string name="a_prazo_adapter">À prazo: R$ %s</string>
    <string name="preco_adapter">R$ %s</string>
    <string name="adapter_total_item">Total item: R$ %s</string>
    <string name="adapter_total_pedido">Total ped: R$ %s</string>
    <string name="entre_parenteses">(%s)</string>
    <string name="quantidade_adapter">Quantidade: %d</string>
    <string name="em_parenteses">(%s)</string>
    <string name="cadastro_cliente">Cadastro de Cliente</string>
    <string name="cadastro_venda">Cadastro de Venda</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="celular">Celular</string>
    <string name="email">Email</string>
    <string name="cidade">Cidade</string>
    <string name="situacao">Situação</string>
    <string name="quantidades">Quantidades</string>
    <string name="add_outras_informacoes">Add Outras Informações</string>
    <string name="cpf_cnpj">CPF / CNPJ</string>
    <string name="observacao">Observação</string>
    <string name="salvar">Salvar</string>
    <string name="excluir">Excluir</string>
    <string name="aguarde_terminar">Aguarde a operação terminar</string>
    <string name="acao_desfeita">Ação desfeita!</string>
    <string name="falha_desfazer_acao">Não foi possível desfazer a ação</string>
    <string name="numero_nao_aceito">Número não aceito</string>
    <string name="obrigatorio">Campo obrigatório</string>
    <string name="campo_obrigatorio">Campo <b>%s</b> é obrigatório</string>
    <string name="data_emissao">Data Emissão</string>
    <string name="hora_emissao">Hora Emissão</string>
    <string name="cliente">Cliente</string>
    <string name="vendedor">Vendedor</string>
    <string name="condicao_pagamento">Cond Pagamento</string>
    <string name="digite_nome_cliente">Digite o nome da pessoa</string>
    <string name="procurar">Procurar</string>
    <string name="digite_nome_produto">Digite o nome do produto</string>
    <string name="digite_codigo_produto">Digite o código do produto</string>
    <string name="digite_ref_produto">Insira a referência do produto</string>
    <string name="digite_codigo_barras">Insira o código de barras</string>
    <string name="totais">Totais</string>
    <string name="total_itens">Itens</string>
    <string name="total_venda">Venda</string>
    <string name="quantidade">Quantidade</string>
    <string name="troco">Troco</string>
    <string name="valor_pago">Valor Pago</string>
    <string name="acrescimo">Acréscimo</string>
    <string name="desconto">Desconto</string>
    <string name="adicionar">Adicionar</string>
    <string name="add_cores">Add Cores</string>
    <string name="add_modelos">Add Modelos</string>
    <string name="add_produtos">Add Produtos</string>
    <string name="cor">Cor</string>
    <string name="cores">Cores</string>
    <string name="nao_encontrado">Nenhum registro foi encontrado</string>
    <string name="nenhuma_empresa">Nenhuma empresa foi encontrada</string>
    <string name="nenhum_resultado">Nenhum resultado foi retornado</string>
    <string name="registro_removido">Registro removido!</string>
    <string name="nao_encontrou_usuario">Não foi possível obter os dados do usuário logado</string>
    <string name="nao_encontrou_empresas">Não foi possível obter os dados das empresas</string>
    <string name="nao_encontrou_condicoes">Não foi possível obter os dados das condiçoes de pagamento</string>
    <string name="nao_encontrou_cores">Não foi possível encontrar as cores do produto</string>
    <string name="nao_encontrou_combinacoes">Não foi possível encontrar as combinações do modelo</string>
    <string name="nao_encontrou_unidades">Não foi possível obter os dados das unidades de medida</string>
    <string name="nao_encontrou_grade_modelo">Não foi possível obter os itens da grade do modelo</string>
    <string name="nao_encontrou_grade_pedido">Não foi possível obter as grades do pedido</string>
    <string name="nao_encontrou_itens_pedido">Não foi possível obter os itens do pedido</string>
    <string name="nao_encontrou_itens_venda">Não foi possível obter os itens da venda</string>
    <string name="falha_inserir_cliente">Falha ao inserir os dados do cliente</string>
    <string name="falha_atualizar_cliente">Falha ao atualizar os dados do cliente</string>
    <string name="falha_inserir_produto">Falha ao inserir os dados do produto</string>
    <string name="falha_atualizar_produto">Falha ao atualizar os dados do produto</string>
    <string name="falha_inserir_modelo">Falha ao inserir os dados do modelo</string>
    <string name="falha_atualizar_modelo">Falha ao atualizar os dados do modelo</string>
    <string name="falha_inserir_venda">Falha ao inserir os dados da venda</string>
    <string name="falha_inserir_itens_venda">Falha ao inserir os itens da venda</string>
    <string name="falha_atualizar_venda">Falha ao atualizar os dados da venda</string>
    <string name="falha_atualizar_itens_venda">Falha ao atualizar os itens da venda</string>
    <string name="falha_remover_itens_venda">Falha ao remover os itens da venda</string>
    <string name="falha_inserir_cor">Falha ao inserir os dados da cor</string>
    <string name="falha_atualizar_cor">Falha ao atualizar os dados da cor</string>
    <string name="falha_inserir_crm">Falha ao inserir os dados do crm</string>
    <string name="falha_atualizar_crm">Falha ao atualizar os dados do crm</string>
    <string name="falha_inserir_grade_pedido">Falha ao inserir a grade do pedido</string>
    <string name="falha_inserir_item_pedido">Falha ao inserir os itens do pedido</string>
    <string name="falha_inserir_pedido">Falha ao inserir os dados do pedido</string>
    <string name="falha_atualizar_pedido">Falha ao atualizar os dados do pedido</string>
    <string name="falha_atualizar_grade_pedido">Falha ao atualizar a grade do pedido</string>
    <string name="falha_atualizar_item_pedido">Falha ao atualizar os itens do pedido</string>
    <string name="falha_remover_itens_pedido">Falha ao remover os itens do pedido</string>
    <string name="falha_remover_grade_pedido">Falha ao remover a grade do pedido</string>
    <string name="pressione_voltar_novamente">Pressione o botão <b>voltar</b> novamente para fechar!</string>
    <string name="nao_encontrou_lancamentos">Não foi possível obter a lista de lançamentos</string>
    <string name="nenhuma_condicao">Nenhuma condição de pagamento foi encontrada</string>
    <string name="suite_sistemas">Suite Sistemas</string>
    <string name="separador">_______________________</string>
    <string name="voltar">Voltar</string>
    <string name="pesquisar">Pesquisar</string>
    <string name="chamar">Chamar</string>
    <string name="enviar_email">Enviar email</string>
    <string name="nenhum_email">Nenhum email cadastrado para esse cliente</string>
    <string name="nenhum_telefone">Nenhum telefone cadastrado para esse cliente</string>
    <string name="acao_nao_suportada">Ação não suportada!</string>
    <string name="acao_exclusao_clientes">Ação de exclusão pode ser feita apenas para clientes</string>
    <string name="tipo_pessoa">Tipo Pessoa</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="insira_nome">Insira um nome para continuar</string>
    <string name="salvando">Salvando</string>
    <string name="produtos">Produtos</string>
    <string name="home">Home</string>
    <string name="unidade_medida">Unidade Medida</string>
    <string name="descricao">Descrição</string>
    <string name="referencia">Referência</string>
    <string name="preco_compra">Preço compra</string>
    <string name="a_vista">A vista</string>
    <string name="a_prazo">A prazo</string>
    <string name="preco_venda">Preço venda</string>
    <string name="adicionar_cores">Adicionar Cores</string>
    <string name="nenhuma_unidade_medida">Nenhuma unidade de medida encontrada</string>
    <string name="nenhuma_grade">Nenhuma grade encontrada</string>
    <string name="cadastro_produto">Cadastro de Produto</string>
    <string name="falha_inserir_cores">Falha ao inserir os dados das cores</string>
    <string name="falha_remover_cores">Falha ao remover as cores do produto</string>
    <string name="falha_inserir_combinacoes">Falha ao inserir os dados das combinações</string>
    <string name="falha_remover_combinacoes">Falha ao remover as combinações do modelo</string>
    <string name="digite_nome_cor">Digite o nome da cor</string>
    <string name="adicione_cores">É necessário ao menos uma cor para continuar</string>
    <string name="adicione_combinacoes">É necessário ao menos uma combinação para continuar</string>
    <string name="adicione_grades">É necessário ao menos uma grade para continuar</string>
    <string name="percentual_lucro">Perc. Lucro</string>
    <string name="modelos">Modelos</string>
    <string name="codigo">Código</string>
    <string name="cod_barras">Cod. Barras</string>
    <string name="pesquisa_produto_por">Pesquisa produto por:</string>
    <string name="leitor_cod_barras">Leitor de Código de Barras</string>
</resources>