<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/menu_customer"
          android:icon="@drawable/ic_people"
          android:title="@string/clientes"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/menu_sale"
          android:icon="@drawable/ic_cart"
          android:title="@string/vendas"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/menu_order"
          android:icon="@drawable/ic_assigment"
          android:title="@string/pedidos"
          app:showAsAction="ifRoom"/>

    <item android:id="@+id/menu_financial"
          android:icon="@drawable/ic_credit_card"
          android:title="@string/lancamentos"
          app:showAsAction="ifRoom"/>

</menu>