<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:background="@color/colorPrimaryDark"
              android:clipChildren="false"
              android:gravity="bottom"
              android:orientation="vertical"
              android:padding="@dimen/default_padding"
              android:weightSum="1">

    <ImageView
            android:id="@+id/nav_header_imagem"
            android:layout_width="60dp"
            android:layout_height="70dp"
            android:contentDescription="@string/suite_sistemas"
            android:paddingTop="@dimen/default_padding"
            android:src="@drawable/icon"/>

    <TextView
            android:id="@+id/nav_header_nome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.47"
            android:paddingTop="16dp"
            android:text="@string/app_name"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textColor="@android:color/white"/>

    <TextView
            android:id="@+id/nav_header_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email_suite"
            android:textColor="@android:color/white"
            android:textSize="@dimen/small_font" />

</LinearLayout>
