<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/config_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white_opaque"
        android:orientation="vertical"
        tools:context=".view.fragment.ConfigFragment">

    <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/progress_bar_height">

        <me.zhanghai.android.materialprogressbar.MaterialProgressBar
                android:id="@+id/config_progressbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/CustomProgressBar"/>

    </FrameLayout>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white_opaque"
            android:scrollbars="none">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/default_margin"
                    style="@style/Card">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                    <TextView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="@dimen/tiny_margin"
                            android:text="@string/pesquisa_produto_por"
                            android:textSize="@dimen/medium_font"
                            android:textStyle="bold"/>

                    <RadioGroup
                            android:id="@+id/config_product_search"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="@dimen/small_margin"
                            android:layout_marginLeft="@dimen/small_margin"
                            android:layout_marginTop="@dimen/tiny_margin"
                            android:orientation="vertical">

                        <RadioButton
                                android:id="@+id/config_product_search_code"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/codigo"
                                android:textSize="@dimen/medium_font"/>

                        <RadioButton
                                android:id="@+id/config_product_search_barcode"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/cod_barras"
                                android:textSize="@dimen/medium_font"/>

                        <RadioButton
                                android:id="@+id/config_product_search_ref"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/referencia"
                                android:textSize="@dimen/medium_font"/>

                        <RadioButton
                                android:id="@+id/config_product_search_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/descricao"
                                android:textSize="@dimen/medium_font"/>

                    </RadioGroup>

                </LinearLayout>

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </ScrollView>

</LinearLayout>